# scan

./: PLAN_PERFECTION.md  README.md  Retenir.md  app_soutenance.py  auto_patcher.py  discovery.py  install.sh  port_scanner.py  pyproject.toml  resolution_engine.py  resume.md  scan.sh  scan_orchestrator.py  vulnerability_scanner.py
.github/workflows/: ci_cd.yml
