[tool.poetry]
name = "mirage-scan"
version = "1.0.0"
description = "Mirage Scan Engine: Professional Network Diagnostic & Auto-Patching Tool"
authors = ["7Bhil <contact@7bhil.com>"]
readme = "README.md"
packages = [{include = "scan"}]

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
nettacker = {path = "../scan", develop = true} # Link to local nettacker or specific version

[tool.poetry.scripts]
mirage-scan = "scan.scan_orchestrator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
